# Specmut

./: Cargo.toml  README.md
crates/specmut-cli/: Cargo.toml
crates/specmut-cli/src/: compare.rs  config.rs  exit_codes.rs  html.rs  hybrid_checker.rs  lean_pipeline.rs  main.rs  model_file.rs  output.rs  pipeline.rs  witness.rs
crates/specmut-cli/tests/: e2e.rs  external_validation.rs  lean_full.rs  test_cli.rs  test_compare.rs
crates/specmut-core/: Cargo.toml
crates/specmut-core/src/: cegis.rs  formula.rs  lattice.rs  lib.rs  metric.rs  model.rs  mutation.rs  signature.rs  tightness.rs
crates/specmut-core/tests/: test_cegis_vs_exhaustive_sorting.rs  test_sorting_tightness.rs
crates/specmut-lean/: Cargo.toml
crates/specmut-lean/lean/: specmut_export.lean
crates/specmut-lean/lean/test_fixtures/: bst.lean  deriving.lean  hypotheses.lean  minimal.lean  multi_inductive.lean  nat_props.lean  recursive_list.lean
crates/specmut-lean/src/: analysis.rs  ir_types.rs  lib.rs  runner.rs  slicer.rs  translator.rs
crates/specmut-lean/tests/: test_analysis.rs  test_phase_g.rs  test_slicer.rs  test_translator.rs
crates/specmut-lean/tests/fixtures/: bst.ir.json  deriving.ir.json  hypotheses.ir.json  minimal.ir.json  multi_inductive.ir.json  nat_props.ir.json  recursive_list.ir.json  sort_lean.ir.json
crates/specmut-parser/: Cargo.toml
crates/specmut-parser/src/: dafny_parser.rs  fol_parser.rs  lean_elaborator.rs  lean_parser.rs  lib.rs
crates/specmut-smt/: Cargo.toml
crates/specmut-smt/src/: lib.rs  smt_types.rs  z3_bridge.rs
phase3/aggregate/: comparison.json  progression.json  report.html  summary.json
phase3/benchmarks/bintree/: provenance.toml  reference_analyzable.lean
phase3/benchmarks/palindromes/: provenance.toml  reference_analyzable.lean
phase3/benchmarks/tc/: provenance.toml  reference_analyzable.lean
phase3/prompts/: bintree.md  palindromes.md  tc.md
phase3/scripts/: _common.py  aggregate.py  generate.py  lean_check.py  reduce.py  report.py  run_pipeline.py  run_specmut.py
phase4/: config.toml  config_qwen_only.toml  config_qwen_specmut_feedback_pilot5.toml
phase4/benchmarks/: pre_registration_log.json
phase4/benchmarks/list_min/: partial.lean  prompt.txt  prompt_qwen.txt  reference.lean  scaffold.lean  trivial.lean
phase4/benchmarks/list_reverse/: partial.lean  prompt.txt  prompt_qwen.txt  reference.lean  scaffold.lean  trivial.lean
phase4/benchmarks/set_insert/: partial.lean  prompt.txt  prompt_qwen.txt  reference.lean  scaffold.lean  trivial.lean
phase4/benchmarks/sorting/: partial.lean  prompt.txt  prompt_qwen.txt  reference.lean  scaffold.lean  trivial.lean
phase4/disabled_benchmarks/_bst_insert_disabled.OFF/: partial.lean  prompt.txt  reference.lean  trivial.lean
phase4/lean_results/controls/: bst_insert_partial.json  bst_insert_trivial.json  list_min_partial.json  list_min_trivial.json  list_reverse_partial.json  list_reverse_trivial.json  set_insert_partial.json  set_insert_trivial.json  sorting_partial.json  sorting_trivial.json
phase4/scripts/: _common.py  aggregate.py  analyze_specmut_feedback.py  check_repair_validator_cases.py  generate_baseline.py  generate_feedback.py  generate_repaired.py  lean_check.py  preflight_qwen_templates.py  repair_templates.py  report.py  run_pipeline.py  run_specmut.py  sanitize_generated.py  smoke_qwen_compile_specmut.py  validate_determinism.py  validate_repair_template.py
phase4/tmp_qwen_preflight/: list_min_repair_theorems.lean  list_min_theorems.lean  list_reverse_repair_theorems.lean  list_reverse_theorems.lean  set_insert_repair_theorems.lean  set_insert_theorems.lean  sorting_repair_theorems.lean  sorting_theorems.lean
python/: pyproject.toml
python/specmut_viz/: __init__.py  attrition.py  comparison.py  dependency_graph.py  experiment_a.py  experiment_b.py  hasse.py  progression.py  report.py  stat_tables.py  survival.py  witness_report.py
python/tests/: conftest.py  test_hasse.py  test_report.py
specs/binary_search/: search.fol
specs/minimal/: empty.fol  trivial.fol
specs/set/: set.fol
specs/sorting/: sort.fol  sort_lean.lean  sort_v1_buggy.fol  sort_v3_correct.fol
specs/stack/: stack.fol
(+53 files in other folders)
