[workspace]
resolver = "2"
members = [
    "crates/specmut-core",
    "crates/specmut-smt",
    "crates/specmut-parser",
    "crates/specmut-lean",
    "crates/specmut-cli",
]

[workspace.package]
version = "0.1.0-alpha"
edition = "2021"
rust-version = "1.82"
license = "Apache-2.0"

[workspace.dependencies]
num-bigint = "0.4"
thiserror = "1"
rand = "0.8"
rand_chacha = "0.3"
nom = "7"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.lints.rust]
unused_must_use = "deny"

[workspace.lints.clippy]
unwrap_used = "warn"
