[package]
name = "specmut-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Command-line front-end for the specmut framework."

[[bin]]
name = "specmut"
path = "src/main.rs"

[dependencies]
specmut-core = { path = "../specmut-core" }
specmut-lean = { path = "../specmut-lean" }
specmut-parser = { path = "../specmut-parser" }
specmut-smt = { path = "../specmut-smt", optional = true }
clap = { workspace = true }
num-bigint = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = "3"

[features]
default = []
smt = ["dep:specmut-smt"]

[lints]
workspace = true
